--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
     </dependencies>
 
     <build>
-        <finalName>TestGame</finalName>
+        <finalName>Test</finalName>
         <sourceDirectory>${basedir}/src/main/java</sourceDirectory>
         <resources>
             <resource>
